alterações com auxilio do bootstrap em toda pagina

--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a onclick="scrollToSection('scroll1')" class="nav-link active" aria-current="page" href="#">Quem
+              <a onclick="scrollToSection('scroll1')" class="nav-link" aria-current="page">Quem
                 Somos</a>
             </li>
             <li class="nav-item">
-              <a onclick="scrollToSection('scroll2')" class="nav-link" href="#">Nossa Equipe</a>
+              <a onclick="scrollToSection('scroll2')" class="nav-link">Nossa Equipe</a>
             </li>
             <li class="nav-item">
-              <a onclick="scrollToSection('scroll3')" class="nav-link" href="#">Endereço</a>
+              <a onclick="scrollToSection('scroll3')" class="nav-link">Endereço</a>
             </li>
             <li class="nav-item">
-              <a onclick="scrollToSection('scroll4')" class="nav-link" href="#">Nossos Serviços</a>
+              <a onclick="scrollToSection('scroll4')" class="nav-link">Nossos Serviços</a>
             </li>
 
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item">Action</a></li>
+              <li><a class="dropdown-item">Another action</a></li>
+              <li><a class="dropdown-item">Something else here</a></li>
             </ul>
             </li>
           </ul>
@@ -63,13 +63,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/imagens/banner1.png" class="d-block w-100">
+        <img src="imagens/banner1.png" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="/imagens/banner2.png" class="d-block w-100">
+        <img src="imagens/banner2.png" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="/imagens/banner3.png" class="d-block w-100">
+        <img src="imagens/banner3.png" class="d-block w-100">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -87,45 +87,47 @@
   <!-- COMEÇO DA PÁGINA -->
 
   <div id="scroll1"></div>
-  <div class="linha" id="div1"></div>
 
   <main>
     <section id="quemsomos">
-      <h1 class="qm">QUEM SOMOS </h1><br>
-      <p class="texto">Seja muito bem-vindo à nossa empresa, referência em otimização de negócios.<br> Desde nossa
-        fundação, temos nos empenhado em simplificar e aprimorar a sua jornada empresarial. Especializados em sistemas
-        de automatização, oferecemos soluções completas e práticas, incluindo venda de sistemas SAT, NFe e CFe, além de
-        serviços de certificação digital para garantir a segurança das suas transações. Nossa missão é clara:
-        impulsionar o seu sucesso por meio de eficiência, confiabilidade e resultados tangíveis. Ao escolher nossa
-        parceria, você está optando por simplificar processos, maximizar resultados e trilhar um caminho empresarial
-        mais promissor.</p><br>
-      <figure id="imgqmsomos">
-        <img src="\imagens\logo_vvs_2.png">
-      </figure>
+      <div class="px-4 pt-5 my-5 text-center border-top border-bottom border-2">
+        <h1 class="display-4 fw-bold text-body-emphasis">Centered screenshot</h1>
+        <div class="col-lg-6 mx-auto">
+          <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+            <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Primary button</button>
+            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+          </div>
+        </div>
+        <div class="overflow-hidden" style="max-height: 30vh;">
+          <div class="container px-5">
+            <img src="imagens/logo_vvs_2.png" class="img-fluid border rounded-3 shadow mb-4" alt="Example image" width="500" height="400" loading="lazy">
+          </div>
+        </div>
+      </div>
     </section>
 
 
     <!-- NOSSA EQUIPE -->
     <div id="scroll2"></div>
-    <div class="linha" id="div2"></div>
 
-    <section id="nossaequipe">
+    <section id="nossaequipe" class="border-top border-bottom border-2">
       <p class="ne">NOSSA EQUIPE</p>
 
       <div class="fileira1">
 
         <div class="person">
-          <img class="pessoa" id="p1" src="/imagens/pauloH.PNG">
+          <img class="pessoa" id="p1" src="imagens/pauloH.PNG">
           <figcaption>Paulo Henrique</figcaption>
         </div>
 
         <div class="person">
-          <img class="pessoa" id="p2" src="/imagens/pauloS.PNG">
+          <img class="pessoa" id="p2" src="imagens/pauloS.PNG">
           <figcaption>Paulo Sérgio</figcaption>
         </div>
 
         <div class="person">
-          <img class="pessoa" id="p3" src="/imagens/fabio2.png">
+          <img class="pessoa" id="p3" src="imagens/fabio2.png">
           <figcaption>Fábio Matheus</figcaption>
         </div>
 
@@ -136,17 +138,17 @@
       <div class="fileira2">
 
         <div class="person">
-          <img class="pessoa" id="p4" src="/imagens/pessoa.PNG">
+          <img class="pessoa" id="p4" src="imagens/pessoa.PNG">
           <figcaption>Sócio 1</figcaption>
         </div>
 
         <div class="person">
-          <img class="pessoa" id="p5" src="/imagens/pessoa.PNG">
+          <img class="pessoa" id="p5" src="imagens/pessoa.PNG">
           <figcaption>Sócio 2</figcaption>
         </div>
 
         <div class="person">
-          <img class="pessoa" id="p6" src="/imagens/pessoa.PNG">
+          <img class="pessoa" id="p6" src="imagens/pessoa.PNG">
           <figcaption>Sócio 3</figcaption>
         </div>
       </div>
@@ -154,9 +156,8 @@
 
 
     <div id="scroll3"></div>
-    <div class="linha" id="div3"></div>
 
-    <section id="localizacao">
+    <section id="localizacao" class="border-top border-bottom border-2">
       <h1 class="nossoendereco">ENDEREÇO<br></h1>
       <p class="rua"> 📌 R. Leopoldo Macedo, 349 -<br class="quebra">Ponte
         Alta, Aparecida - SP, 12570-000</p>
@@ -192,42 +193,74 @@
 
 
     <div id="scroll4"></div>
-    <div class="linha" id="div4"></div>
-
-    <section id="nossosservicos">
-      <span class="ns">NOSSOS SERVIÇOS</span>
-      <p class="subtitulo">VENDA DE SISTEMAS</p>
-      <p class="textons">Sistemas de Automatização Fiscal:
-
-        SAT (Sistema Autenticador e Transmissor): Sabemos que cumprir as obrigações fiscais é uma parte fundamental de
-        qualquer negócio. Com nossa experiência em Sistemas SAT, garantimos que sua empresa esteja sempre em
-        conformidade, emitindo Cupons Fiscais Eletrônicos (CF-e-SAT) de forma precisa e eficiente.
-
-        NFe (Nota Fiscal Eletrônica) e CFe (Cupom Fiscal Eletrônico): Simplificar a emissão de documentos fiscais é
-        fundamental para um negócio bem-sucedido. Nossos sistemas para Notas Fiscais Eletrônicas e Cupons Fiscais
-        Eletrônicos garantem que suas transações sejam registradas com segurança e em conformidade com a legislação
-        vigente.</p>
-
-      <p class="subtitulo">CERTIFICAÇÃO DIGITAL</p>
-      <p class="textons" id="textocerti">Em um mundo digital, a segurança é primordial. Nossos serviços de certificação
-        digital oferecem autenticação robusta e confidencialidade para suas transações online. Seja na aquisição de
-        novos certificados ou na renovação dos existentes, nossa equipe experiente está pronta para garantir a segurança
-        de suas informações.</p>
-      <a id="certificacao" href="/html e css/certificacao.html" target="_blank">ACESSAR CERTIFICAÇÃO DIGITAL</a>
 
 
-      <p class="subtitulo">PVD MOBILE (EM BREVE)</p>
-      <p class="textons">O PVD Mobile é a solução inovadora que combina a praticidade do ponto de venda com a liberdade
-        da mobilidade. Agora, você pode gerenciar suas transações de vendas de forma eficiente e fácil, onde quer que
-        esteja. Ele coloca o poder do PDV diretamente em suas mãos, eliminando as limitações dos sistemas convencionais.
-      </p>
-    </section>
+    <!-- NOSSOS SERVIÇOS -->
+    <div id="nossosServicos" class="  px-4 py-1 border-top border-bottom border-2">
+      <h2 class="pb-2">NOSSOS SERVIÇOS</h2>
+  
+      <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
+        <div class="col d-flex flex-column align-items-start gap-2">
+          <h2 class="fw-bold text-body-emphasis">Certificação digital</h2>
+          <p class="text-body-secondary">A <b>certificação digital</b> é a tecnologia-chave para <b>autenticar identidades e proteger informações na internet</b>. Ela garante a <b>integridade e confidencialidade</b> dos dados, sendo crucial para transações seguras e prevenção de fraudes online. Investir em certificação digital é <b>essencial</b> para a <b>segurança e confiabilidade</b> do seu negócio digital.</p>
+          <p class="text-body-secondary">
+            Oferecemos serviços presenciais ou por videoconferência para facilitar a obtenção do seu certificado. Lembre-se de manter atenção ao prazo de validade do seu certificado digital, garantindo a continuidade da sua proteção online. Conte conosco para uma experiência segura e conveniente.
+          </p>
+          <a href="certificacao.html" target="_blank" class="btn btn-primary btn-lg">Acessar a Certificação Digital</a>
+        </div>
+  
+        <div class="col">
+          <div class="row row-cols-1 row-cols-sm-2 g-4">
+            <div class="col d-flex flex-column gap-2">
+              <div class="border-top">
+                <svg class="bi" width="1em" height="1em">
+                  <use xlink:href="#collection" />
+                </svg>
+              </div>
+              <h4 class="fw-semibold mb-0 text-body-emphasis">SAT (Sistema de Autenticação e Transmissão)</h4>
+              <p class="text-body-secondary">Simplifique a emissão de cupons fiscais eletrônicos com nosso SAT, atendendo às normas fiscais e agilizando processos para o varejo.</p>
+            </div>
+  
+            <div class="col d-flex flex-column gap-2">
+              <div class="border-top">
+                <svg class="bi" width="1em" height="1em">
+                  <use xlink:href="#gear-fill" />
+                </svg>
+              </div>
+              <h4 class="fw-semibold mb-0 text-body-emphasis">NFe (Nota Fiscal Eletrônica)</h4>
+              <p class="text-body-secondary"> Otimize a gestão fiscal com nossa solução de NFe, permitindo a emissão e armazenamento seguro de notas fiscais eletrônicas, reduzindo erros e custos.</p>
+            </div>
+  
+            <div class="col d-flex flex-column gap-2">
+              <div class="border-top">
+                <svg class="bi" width="1em" height="1em">
+                  <use xlink:href="#speedometer" />
+                </svg>
+              </div>
+              <h4 class="fw-semibold mb-0 text-body-emphasis">CFe (Cupom Fiscal Eletrônico)</h4>
+              <p class="text-body-secondary">Garanta conformidade com a legislação fiscal através do CFe, que permite a emissão rápida de cupons fiscais eletrônicos, ideal para estabelecimentos comerciais.</p>
+            </div>
+  
+            <div class="col d-flex flex-column gap-2">
+              <div class="border-top">
+                <svg class="bi" width="1em" height="1em">
+                  <use xlink:href="#table" />
+                </svg>
+              </div>
+              <h4 class="fw-semibold mb-0 text-body-emphasis"><span id="traco">PVD MOBILE</span> (Ponto de Venda Móvel) - Em Breve</h4>
+              <p class="text-body-secondary">Em breve, nossa solução PVD Mobile trará mobilidade e conveniência para suas operações de vendas, proporcionando flexibilidade e agilidade no atendimento ao cliente.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
   </main>
 
   <div id="scroll5"></div>
-  <div class="linha" id="div5"></div>
 
+
+  <section id="contato" class="border-top border-bottom border-2">
   <div id="interacao">
     <h1>ENTRE EM CONTATO</h1>
     <p>📞 <span>TELEFONE:</span> (12) 3600-5110</p>
@@ -243,19 +276,34 @@
       <a id="whats" href="#" target="_blank"><i class="fab fa-whatsapp"></i></a>
     </div>
   </div>
+</section>
 
-
-  <div class="linha"></div>
+<footer>
+  <div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <p class="col-md-4 mb-0 text-body-secondary">&copy; 2023, Via Vale Sistemas</p>
+  
+      <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+      </a>
+  
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a onclick="scrollToSection('scroll1')" class="nav-link px-2 text-body-secondary">Quem Somos</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Nossa Equipe</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Endereço</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Serviços</a></li>
+      </ul>
+    </footer>
+  </div>
+</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
 
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
-<footer>
-  <img src="\imagens\footer_logo_vvs_2.png">
-</footer>
 
-</html>
+
+</html> 
