alteração no nossa equipe

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- CABEÇALHO -->
 
   <header id="cabecalho">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav id="menu" class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
         <a class="navbar-brand" onclick="scrollToSection('cabecalho')">VIA VALE SISTEMAS</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -94,8 +94,8 @@
           <p class="lead mb-4">Somos empenhados em simplificar e aprimorar a sua jornada empresarial. Especializados em sistemas de automatização, oferecemos soluções completas e práticas, incluindo venda de sistemas <b>SAT, NFe e CFe</b>, além de serviços de certificação digital para garantir a segurança das suas transações.</p>
           <p class="lead mb-4">Nossa missão é clara: impulsionar o seu sucesso por meio de eficiência, confiabilidade e resultados tangíveis. Ao escolher nossa parceria, você está optando por simplificar processos, maximizar resultados e trilhar um caminho empresarial mais promissor.</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <button type="button" class="btn btn-dark btn-lg px-4 me-sm-3">Nossos Serviços</button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Contate-nos</button>
+            <button onclick="scrollToSection('scroll4')" type="button" class="btn btn-dark btn-lg px-4 me-sm-3">Nossos Serviços</button>
+            <button onclick="scrollToSection('scroll5')" type="button" class="btn btn-outline-secondary btn-lg px-4">Contate-nos</button>
           </div>
         </div>
         <div class="overflow-hidden" style="max-height: 30vh;">
@@ -113,44 +113,66 @@
     <section id="nossaequipe" class="border-top border-bottom border-2">
       <h1 id="ne" class="display-4 fw-bold text-body-emphasis mb-3">Nossa Equipe</h1>
 
-      <div class="fileira1">
 
-        <div class="person">
-          <img class="pessoa" id="p1" src="imagens/pauloH.PNG">
-          <figcaption>Paulo Henrique</figcaption>
+      <div class="album py-5 ">
+        <div class="container">
+    
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <div class="col">
+              <div class="card shadow-sm">
+                <img src="imagens/pauloH.PNG">
+                <div class="card-body">
+                  <p class="card-text">Paulo Henrique</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card shadow-sm">
+                <img src="imagens/pauloS.png">
+                <div class="card-body">
+                  <p class="card-text">Paulo Sérgio</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card shadow-sm">
+                <img src="imagens/fabio2.png">
+                <div class="card-body">
+                  <p class="card-text">Fábio Matheus</p>
+                </div>
+              </div>
+            </div>
+    
+            <div class="col">
+              <div class="card shadow-sm">
+                <img src="imagens/pessoa.PNG">
+                <div class="card-body">
+                  <p class="card-text">Pessoa 4</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card shadow-sm">
+                <img src="imagens/pessoa.PNG">
+                <div class="card-body">
+                  <p class="card-text">Pessoa 5</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card shadow-sm">
+                <img src="imagens/pessoa.PNG">
+                <div class="card-body">
+                  <p class="card-text">Pessoa 6</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-
-        <div class="person">
-          <img class="pessoa" id="p2" src="imagens/pauloS.PNG">
-          <figcaption>Paulo Sérgio</figcaption>
-        </div>
-
-        <div class="person">
-          <img class="pessoa" id="p3" src="imagens/fabio2.png">
-          <figcaption>Fábio Matheus</figcaption>
-        </div>
-
       </div>
 
 
-
-      <div class="fileira2">
-
-        <div class="person">
-          <img class="pessoa" id="p4" src="imagens/pessoa.PNG">
-          <figcaption>Sócio 1</figcaption>
-        </div>
-
-        <div class="person">
-          <img class="pessoa" id="p5" src="imagens/pessoa.PNG">
-          <figcaption>Sócio 2</figcaption>
-        </div>
-
-        <div class="person">
-          <img class="pessoa" id="p6" src="imagens/pessoa.PNG">
-          <figcaption>Sócio 3</figcaption>
-        </div>
-      </div>
     </section>
 
 
